--- a/encyclopedia/templates/encyclopedia/create_page.html
+++ b/encyclopedia/templates/encyclopedia/create_page.html
@@ -7,6 +7,9 @@
 {% block body %}
     <h1>Create New Page</h1>
 
+    {% if name_error %}
+    <p class="error">Error: page already exists!</p>
+    {% endif %}
     <form action="{% url 'new_page' %}" method="POST">
         {% csrf_token %}
         {{ form }}
