Can't get the css to apply to the error for some reason, made it inline for now.

--- a/encyclopedia/templates/encyclopedia/create_page.html
+++ b/encyclopedia/templates/encyclopedia/create_page.html
@@ -8,7 +8,9 @@
     <h1>Create New Page</h1>
 
     {% if name_error %}
-    <p class="error">Error: page already exists!</p>
+    <div class="error" style="color:red;">
+        Error: page already exists!
+    </div>
     {% endif %}
     <form action="{% url 'new_page' %}" method="POST">
         {% csrf_token %}
