--- a/encyclopedia/templates/encyclopedia/edit_page.html
+++ b/encyclopedia/templates/encyclopedia/edit_page.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>Edit Page</h1>
 
-    <form action="{% url 'edit_page' %}" method="POST">
+    <form action="{% url 'edit_page' entry_title %}" method="POST">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Save">
